--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,6 +3,75 @@
 @import "reset";
 @import "global";
 
+.header {
+  padding: 40px 0;
+
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
+.menu {
+  &__list {
+    display: flex;
+  }
+
+  &__list-item + .menu__list-item {
+    margin-left: 35px;
+  }
+
+  &__list-link {
+    @extend %quicksand-400;
+    //@extend %roboto-400;
+    color: $title;
+    padding-bottom: 1px;
+    //transition: all .3s;
+
+    &:hover {
+      color: $accent;
+      border-bottom: 2px solid $accent;
+      @extend %quicksand-500;
+      //@extend %roboto-700;
+      //font-weight: 700;
+      //text-shadow: 1px 0 0 currentColor, 0 0 0 currentColor;
+    }
+  }
+
+  &__list-link--active {
+    @extend %quicksand-500;
+    //@extend %roboto-700;
+    color: $accent;
+    border-bottom: 2px solid $accent;
+  }
+}
+
+.user-nav {
+  display: flex;
+
+  &__link {
+    position: relative;
+  }
+
+  &__link + .user-nav__link {
+    margin-left: 25px;
+  }
+
+  &__num {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: $accent;
+    top: -10px;
+    right: -15px;
+    font-size: 12px;
+    color: #fff;
+    line-height: 20px;
+    text-align: center;
+  }
+}
 
 
 @import "media";
