--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'Quicksand-Regular', sans-serif;
+  font-family: 'Quicksand-Regular';
   font-weight: 400;
   font-style: normal;
   src: local('Quicksand-Regular'),
@@ -8,7 +8,7 @@ url('../fonts/Quicksand-Regular.woff') format('woff');
   font-display: swap;
 }
 @font-face {
-  font-family: 'Quicksand-Medium', sans-serif;
+  font-family: 'Quicksand-Medium';
   font-weight: 500;
   font-style: normal;
   src: local('Quicksand-Medium'),
@@ -17,7 +17,7 @@ url('../fonts/Quicksand-Medium.woff') format('woff');
   font-display: swap;
 }
 @font-face {
-  font-family: 'Roboto-Regular', sans-serif;
+  font-family: 'Roboto-Regular';
   font-weight: 400;
   font-style: normal;
   src: local('Roboto-Regular'),
@@ -26,7 +26,7 @@ url('../fonts/Roboto-Regular.woff') format('woff');
   font-display: swap;
 }
 @font-face {
-  font-family: 'Roboto-Medium', sans-serif;
+  font-family: 'Roboto-Medium';
   font-weight: 500;
   font-style: normal;
   src: local('Roboto-Medium'),
@@ -35,7 +35,7 @@ url('../fonts/Roboto-Medium.woff') format('woff');
   font-display: swap;
 }
 @font-face {
-  font-family: 'Roboto-Bold', sans-serif;
+  font-family: 'Roboto-Bold';
   font-weight: 700;
   font-style: normal;
   src: local('Roboto-Bold'),
