--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -7,19 +7,34 @@ $bg: #f6f6f6;
   font-family: 'Quicksand-Regular', sans-serif;
   font-weight: 400;
 }
+
 %quicksand-500 {
   font-family: 'Quicksand-Medium', sans-serif;
   font-weight: 500;
 }
+
 %roboto-400 {
   font-family: 'Roboto-Regular', sans-serif;
   font-weight: 400;
 }
+
 %roboto-500 {
   font-family: 'Roboto-Medium', sans-serif;
   font-weight: 500;
 }
+
 %roboto-700 {
   font-family: 'Roboto-Bold', sans-serif;
   font-weight: 700;
+}
+
+%btn {
+  background: $accent;
+  color: #fff;
+  text-transform: uppercase;
+  @extend %roboto-400;
+  padding: 12px 26px;
+  cursor: pointer;
+  box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+
 }
