--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -29,3 +29,39 @@ a{
   font-weight: 500;
   @extend %quicksand-500;
 }
+.tittle{
+  text-align: center;
+  @extend %roboto-700;
+  font-size: 48px;
+  color:$title;
+  line-height: 65px;
+  text-transform: uppercase;
+}
+
+.text {
+  text-align: center;
+  max-width: 570px;
+  margin: 0 auto 55px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
