--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -287,7 +287,7 @@
   &__inner {
     background-image: url('../images/decor/categories-right-bg.png');
     background-repeat: no-repeat;
-    background-position:center right;
+    background-position: center right;
   }
 }
 
@@ -435,6 +435,58 @@
   }
 }
 
+//================================================
+
+.video-fashion {
+  @extend %bgimg;
+  background-color: $bg;
+  padding: 125px 0;
+
+  &__inner {
+    display: flex;
+  }
+
+  &__popup {
+    margin-right: 60px;
+    max-width: 530px;
+    width: 100%;
+    height: 480px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    @extend %bgimg;
+  }
+
+  &__content {
+    max-width: 570px;
+  }
+
+  &__subtitle {
+    font-size: 22px;
+    color: $accent;
+    text-transform: uppercase;
+    line-height: 1.182;
+    padding-top: 75px;
+    margin-bottom: 14px;
+  }
+
+  &__tittle {
+    margin-bottom: 40px;
+    text-align: left;
+    line-height: 26px;
+  }
+
+  &__text {
+    margin-bottom: 60px;
+  }
+
+  &__link {
+    @extend %btn;
+    padding: 19px 30px;
+    letter-spacing: 2px;
+
+  }
+}
 
 @import "media";
 
