--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -488,5 +488,145 @@
   }
 }
 
+//================================================
+.products {
+  padding: 105px 0 120px;
+text-align: center;
+  &__tittle {
+    margin-bottom: 20px;
+  }
+
+  &__items {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 30px;
+    margin-bottom: 48px;
+  }
+  &__link{
+    @extend %roboto-400;
+    letter-spacing: 2px;
+text-transform: uppercase;
+    color: $title;
+    display: inline-block;
+    border: 1px solid $accent;
+    padding: 16px 27px;
+  }
+}
+
+.products-item {
+  max-width: 370px;
+  text-align: center;
+  padding-bottom: 12px;
+  &__img-box {
+    position: relative;
+    height: 370px;
+    overflow: hidden;
+    margin-bottom: 25px;
+  }
+
+  &__link-box {
+    position: absolute;
+    bottom: 50px;
+    background-color: #fff;
+    left: 0;
+    right: 0;
+    width: 212px;
+    height: 50px;
+    margin: 0 auto;
+    border-radius: 22px;
+    box-shadow: 0px 5px 30px 0px rgba(152, 152, 152, 0.2);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    transform: translateY(300%);
+    transition: all .3s;
+  }
+
+  &__link--line {
+    position: relative;
+
+  }
+
+  &__link--line::before,
+  &__link--line::after {
+    content: '';
+    position: absolute;
+    width: 1px;
+    height: 30px;
+    background: #ececec;
+    top: 0;
+
+  }
+
+  &__link--line::before {
+    left: -27px;
+  }
+
+  &__link--line::after {
+    left: 43px;
+  }
+
+  &__link {
+    display: inherit;
+
+    path {
+      transition: all .3s;
+    }
+  }
+
+  &__link:hover {
+    path {
+      fill: $accent
+    }
+  }
+
+  &__images {
+    object-fit: cover;
+  }
+
+  &:hover {
+    .products-item__link-box {
+      transform: translateY(0);
+    }
+  }
+
+  &__tittle {
+    font-size: 22px;
+    @extend %roboto-400;
+    color: $title;
+    line-height: 1.182;
+  }
+  &__price{
+    display: flex;
+    justify-content: center;
+    @extend %roboto-500;
+    color: $title;
+    line-height: 1.625;
+  }
+  &__new-price{
+    padding: 0 12px;
+  }
+  &__old-price{
+    padding: 0 12px;
+    color: $default;
+    text-decoration: line-through;
+  }
+  &--sale{
+    .products-item__img-box::before  {
+      content: 'SALE';
+      @extend %btn;
+      position: absolute;
+      top: 25px;
+      left: 25px;
+      line-height: 1;
+    }
+  }
+}
+.star{
+  margin: 0 auto;
+}
+
+//================================================
+
 @import "media";
 
