--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -156,7 +156,7 @@
     width: 100%;
     border: none;
     padding: 12px 10px 12px 15px;
-    box-shadow: 0px 7px 20px 0px rgba(192, 192, 192, 0.3);
+    box-shadow: 0 7px 20px 0 rgba(192, 192, 192, 0.3);
 
     &::placeholder {
       color: $default;
@@ -324,7 +324,7 @@
   &__item {
     width: 370px;
     padding: 60px 30px;
-    box-shadow: 20px 0px 60px 0px rgba(202, 202, 202, 0.35);
+    box-shadow: 20px 0 60px 0 rgba(202, 202, 202, 0.35);
     background: #fff;
   }
 
@@ -491,7 +491,8 @@
 //================================================
 .products {
   padding: 105px 0 120px;
-text-align: center;
+  text-align: center;
+
   &__tittle {
     margin-bottom: 20px;
   }
@@ -502,14 +503,9 @@ text-align: center;
     grid-gap: 30px;
     margin-bottom: 48px;
   }
-  &__link{
-    @extend %roboto-400;
-    letter-spacing: 2px;
-text-transform: uppercase;
-    color: $title;
-    display: inline-block;
-    border: 1px solid $accent;
-    padding: 16px 27px;
+
+  &__link {
+    @extend %btn_link;
   }
 }
 
@@ -517,6 +513,7 @@ text-transform: uppercase;
   max-width: 370px;
   text-align: center;
   padding-bottom: 12px;
+
   &__img-box {
     position: relative;
     height: 370px;
@@ -534,7 +531,7 @@ text-transform: uppercase;
     height: 50px;
     margin: 0 auto;
     border-radius: 22px;
-    box-shadow: 0px 5px 30px 0px rgba(152, 152, 152, 0.2);
+    box-shadow: 0 5px 30px 0 rgba(152, 152, 152, 0.2);
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -596,23 +593,27 @@ text-transform: uppercase;
     color: $title;
     line-height: 1.182;
   }
-  &__price{
+
+  &__price {
     display: flex;
     justify-content: center;
     @extend %roboto-500;
     color: $title;
     line-height: 1.625;
   }
-  &__new-price{
+
+  &__new-price {
     padding: 0 12px;
   }
-  &__old-price{
+
+  &__old-price {
     padding: 0 12px;
     color: $default;
     text-decoration: line-through;
   }
-  &--sale{
-    .products-item__img-box::before  {
+
+  &--sale {
+    .products-item__img-box::before {
       content: 'SALE';
       @extend %btn;
       position: absolute;
@@ -622,9 +623,78 @@ text-transform: uppercase;
     }
   }
 }
-.star{
+
+.star {
   margin: 0 auto;
 }
+
+//================================================
+.promo {
+  @extend %bgimg;
+  background-image: url('../images/promo/promo-bg.jpg');
+  //background-position: center top;
+  padding: 160px 0 160px;
+  text-align: center;
+
+  &__inner {
+    max-width: 570px;
+    width: 100%;
+    margin-left: auto;
+  }
+
+  &__subtitle {
+    color: $accent;
+    text-transform: uppercase;
+    font-size: 22px;
+    margin-bottom: 25px;
+
+  }
+
+  &__clock {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 55px;
+  }
+
+  &__clock-item {
+    background: #fff;
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    span{
+      font-size: 48px;
+      @extend %roboto-700;
+      color:$title;
+      margin-bottom: 7px;
+    }
+  }
+
+  &__text {
+
+
+
+  }
+
+  &__link {
+    @extend %btn_link;
+    margin-top: 55px;
+  }
+}
+
+.partners {
+  padding-top: 75px;
+
+  &__list {
+    height: 170px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
 
 //================================================
 
