--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -167,7 +167,6 @@
   &__form-btn {
     border: none;
     @extend %btn;
-
   }
 }
 
@@ -657,6 +656,7 @@
   }
 
   &__clock-item {
+    box-shadow: 0 10px 40px 0 rgba(187, 187, 187, 0.3);
     background: #fff;
     width: 120px;
     height: 120px;
@@ -664,16 +664,16 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    span{
+
+    span {
       font-size: 48px;
       @extend %roboto-700;
-      color:$title;
+      color: $title;
       margin-bottom: 7px;
     }
   }
 
   &__text {
-
 
 
   }
@@ -692,6 +692,122 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+  }
+}
+
+//================================================
+
+.blog {
+  padding: 60px 0 160px;
+  @extend %bgimg;
+  background-image: url('../images/blog/blog_bg.jpg');
+  background-size: auto;
+  background-position: center;
+
+  &__items {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    &::after{
+      content: '';
+      position: absolute;
+      right: -20px;
+      top: -25px;
+      z-index: -1;
+      width: 126px;
+      height: 53px;
+      background-image: url('../images/blog/rectungle.svg');
+    }
+  }
+
+  &__item {
+    max-width: 370px;
+    border: 1px solid #e8e8e8;
+    transition: all .3s;
+
+    &:hover {
+      box-shadow: 20px 0 60px 0 rgba(202, 202, 202, 0.35);
+      border: 1px solid transparent;
+
+      .blog__item-link {
+        color: $accent;
+
+        &::after {
+          background-image: url('../images/blog/arrow-accent.svg');
+        }
+
+      }
+    }
+  }
+
+  &__item-imgLink {
+    display: block;
+
+    img {
+      height: 288px;
+      object-fit: cover;
+    }
+  }
+
+  &__item-box {
+    padding: 30px 40px;
+  }
+
+  &__item-info {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 26px;
+  }
+
+  &__item-author,
+  &__item-date {
+    padding-left: 30px;
+    position: relative;
+
+    &::before {
+      content: '';
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      left: 0;
+      top: 4px;
+    }
+  }
+
+  &__item-author::before {
+    @extend %bgimg;
+    background-image: url('../images/blog/user.svg');
+    background-size: auto;
+  }
+
+  &__item-date::before {
+    @extend %bgimg;
+    background-image: url('../images/blog/time.svg');
+    background-size: contain;
+  }
+
+  &__item-title {
+    font-size: 22px;
+    @extend %roboto-400;
+    color: $title;
+    margin-bottom: 20px;
+  }
+
+  &__item-link {
+    position: relative;
+    transition: all 0.3s;
+  }
+
+  &__item-link::after {
+    content: '';
+    position: absolute;
+    //display: inline-block;
+    width: 10px;
+    height: 8px;
+    @extend %bgimg;
+    background-image: url('../images/blog/arrow.svg');
+    top: 8px;
+    right: -14px;
   }
 }
 
